@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2007,v 1.667 2007/03/20 21:04:02 wiz Exp $
+$NetBSD: CHANGES-2007,v 1.668 2007/03/21 00:26:36 joerg Exp $
 
 Changes to the packages collection and infrastructure in 2007:
 
@@ -1273,6 +1273,12 @@ Changes to the packages collection and infrastructure in 2007:
 	Added x11/xf86-video-cyrix version 1.1.0 [joerg 2007-03-20]
 	Added x11/xf86-video-cirrus version 1.1.0 [joerg 2007-03-20]
 	Added x11/xf86-input-void version 1.1.0 [joerg 2007-03-20]
+	Added x11/xf86-video-vmware version 10.15.0 [joerg 2007-03-21]
+	Added x11/xf86-video-via version 0.2.2 [joerg 2007-03-21]
+	Added x11/xf86-video-vga version 4.1.0 [joerg 2007-03-21]
+	Added x11/xf86-video-tseng version 1.1.1 [joerg 2007-03-21]
+	Added x11/xf86-video-trident version 1.2.3 [joerg 2007-03-21]
+	Added x11/xf86-video-tga version 1.1.0 [joerg 2007-03-21]
 	Updated math/yacas to 1.0.63 [drochner 2007-03-20]
 	Updated math/maxima to 5.11.0 [drochner 2007-03-20]
 	Updated editors/TeXmacs to 1.0.6.9 [drochner 2007-03-20]
